[package]
name = "llm-mock-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "llm-mock-server"
path = "src/main.rs"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
num_cpus = "1.13"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
tower = "0.4"
tower-http = { version = "0.4", features = ["limit"] }
sysinfo = "0.30"